@@ -9,6 +9,9 @@ import java.util.ArrayList;
 
 import org.anjocaido.groupmanager.GroupManager;
 import org.anjocaido.groupmanager.dataholder.WorldDataHolder;
+import org.anjocaido.groupmanager.events.GMUserEvent.Action;
+import org.anjocaido.groupmanager.events.GroupManagerEventHandler;
+
 import java.util.Map;
 import org.bukkit.Bukkit;
 import org.bukkit.entity.Player;
@@ -16,7 +19,7 @@ import org.bukkit.entity.Player;
 
 /**
  * 
- * @author gabrielcouto
+ * @author gabrielcouto/ElgarL
  */
 public class User extends DataUnit implements Cloneable {
 
@@ -139,6 +142,8 @@ public class User extends DataUnit implements Cloneable {
 
 			if (notify)
 				GroupManager.notify(this.getName(), String.format(" moved to the group %s.", group.getName()));
+			
+			GroupManagerEventHandler.callEvent(this, Action.GROUP_CHANGED);
 		}
 	}
 
@@ -153,9 +158,11 @@ public class User extends DataUnit implements Cloneable {
 		removeSubGroup(subGroup);
 		subGroups.add(subGroup.getName());
 		flagAsChanged();
-		if (GroupManager.isLoaded())
+		if (GroupManager.isLoaded()) {
 			if (GroupManager.BukkitPermissions.player_join = false)
 				GroupManager.BukkitPermissions.updateAllPlayers();
+			GroupManagerEventHandler.callEvent(this, Action.SUBGROUP_CHANGED);
+		}
 	}
 
 	public int subGroupsSize() {
@@ -177,6 +184,7 @@ public class User extends DataUnit implements Cloneable {
 				if (GroupManager.isLoaded())
 					if (GroupManager.BukkitPermissions.player_join = false)
 						GroupManager.BukkitPermissions.updateAllPlayers();
+				GroupManagerEventHandler.callEvent(this, Action.SUBGROUP_CHANGED);
 				return true;
 			}
 		} catch (Exception e) {
@@ -220,9 +228,11 @@ public class User extends DataUnit implements Cloneable {
 			variables.addVar(key, varList.get(key));
 		}
 		flagAsChanged();
-		if (GroupManager.isLoaded())
+		if (GroupManager.isLoaded()) {
 			if (GroupManager.BukkitPermissions.player_join = false)
 				GroupManager.BukkitPermissions.updateAllPlayers();
+			GroupManagerEventHandler.callEvent(this, Action.INFO_CHANGED);
+		}
 	}
 
 	public User updatePlayer(Player player) {
@@ -238,5 +248,4 @@ public class User extends DataUnit implements Cloneable {
 		}
 		return bukkitPlayer;
 	}
-
 }
